tests/baselines/reference/moduleAssignmentCompat1.errors.txt
moduleAssignmentCompat1.ts(9,8): error TS2709: Cannot use namespace 'A' as a type.
moduleAssignmentCompat1.ts(10,8): error TS2709: Cannot use namespace 'B' as a type.


==== moduleAssignmentCompat1.ts (2 errors) ====
    namespace A {
        export class C { }
    }
    namespace B {
        export class C { }
        class D { }
    }
    
    var a: A;
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    var b: B;
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    // no error
    a = b;
    b = a;
    
    